* fixed a SIGSEGV when the timer listener wasn't deleted
* rewrote DNS resolution to work better with rewritten event system
* fixed call of pure virtual when looking up locally-resolvable names for
  inter-hub connections
* added -p option to add plugins from command line
* changed XmlTok to be more flexible
* added non-crappy dupe nick/CID checking... still needs some stuff though

- 0.10 -
* various autoconf/automake fixes
* moved a few files around
* added a way to pass configure's --prefix option to the C++ files... isn't
counted in dependencies, though... need to figure out how to add it to config.h
* above feature is used when opening config files
* removed some old commented test code
* added qline for logging ADC lines in/out
* plugins actually work now :)
* moving logging facility to use iostreams library... I think I spend more
time on the logging than anything else :)
* logging facilities are actually part of class Logs now
* interhub protocol now needs to be a spanning tree like in the IRC protocol,
rather than each hub having a direct connection to all its peers... not sure
how well this works, though....
* began work on a bans plugin, maybe it can actually be used for real hubs now..
* added plugin hooks for interhub... only primitive ones, though
* started using differentiated exception classes (though the catches still catch
anything...
* a whole bunch of general code shuffling
* added support for T and F types... by doing the same as P and B
* removed string8 class, as it was causing compiler errors on gcc 4.0 and is
generally pointless
* Buffer::writeBuffer renamed to Buffer::Ptr
* UserData now just using std::string for keys
* reworked class Timer to better integrate with libevent
* added real support for F type messages
* command line parsing uses Boost.Program Options
* added initial setup on first start, to get hub name, port, etc.
* upgraded to ADC 0.10
* upgraded to ADC 0.11 (I think, it was just the PAS change, right?)