@@ -17,12 +17,12 @@ void ClientManager::getUserList(ConnectionBase* c) throw()
 	// TODO cache this, and rebuild every once in a while
 	// like Aquila does
 	if(c->hasSupport("ZLIF")) {
-		boost::shared_ptr<ZBuffer> t(new ZBuffer());
+		ZBuffer::MutablePtr t(new ZBuffer);
 		fillUserListBuf(t);
 		t->finalize();
 		c->getSocket()->writeb(t);
 	} else {
-		Buffer::MutablePtr t(new Buffer());
+		Buffer::MutablePtr t(new Buffer);
 		fillUserListBuf(t);
 		c->getSocket()->writeb(t);
 	}
@@ -47,8 +47,8 @@ void ClientManager::addLocalClient(sid_type sid, Client* client) throw()
 {
 	assert(!hasClient(sid));
 	localUsers.insert(make_pair(sid, client));
-    nicks.insert(client->getUserInfo()->getNick());
-    cids.insert(client->getUserInfo()->getCID());
+	nicks.insert(client->getUserInfo()->getNick());
+	cids.insert(client->getUserInfo()->getCID());
 }
 
 void ClientManager::userUpdated(sid_type sid, UserInfo const& ui) throw()
@@ -71,14 +71,14 @@ void ClientManager::addRemoteClient(sid_type sid, UserInfo const& ui) throw()
 	assert(!hasClient(sid) || remoteUsers.count(sid));
 	if(!remoteUsers.count(sid))
 		remoteUsers[sid] = new UserInfo(Command('B', Command::INF, sid));
-    if(ui.has("ID") && remoteUsers[sid]->has("ID")) {
-        cids.erase(remoteUsers[sid]->getCID());
-        cids.insert(ui.getCID());
-    }
-    if(ui.has("NI") && remoteUsers[sid]->has("NI")) {
-        nicks.erase(remoteUsers[sid]->getNick());
-        nicks.insert(ui.getNick());
-    }
+	if(ui.has("ID") && remoteUsers[sid]->has("ID")) {
+		cids.erase(remoteUsers[sid]->getCID());
+		cids.insert(ui.getCID());
+	}
+	if(ui.has("NI") && remoteUsers[sid]->has("NI")) {
+		nicks.erase(remoteUsers[sid]->getNick());
+		nicks.insert(ui.getNick());
+	}
 	remoteUsers[sid]->update(ui);
 }
 
@@ -86,14 +86,14 @@ void ClientManager::removeClient(sid_type sid) throw()
 {
 	assert(hasClient(sid));
 	if(localUsers.count(sid)) {
-        UserInfo* i = localUsers[sid]->getUserInfo();
-        nicks.erase(i->getNick());
-        cids.erase(i->getCID());
+		UserInfo* i = localUsers[sid]->getUserInfo();
+		nicks.erase(i->getNick());
+		cids.erase(i->getCID());
 		localUsers.erase(sid);
 	} else {
-        UserInfo* i = remoteUsers[sid];
-        nicks.erase(i->getNick());
-        cids.erase(i->getCID());
+		UserInfo* i = remoteUsers[sid];
+		nicks.erase(i->getNick());
+		cids.erase(i->getCID());
 		delete i;
 		remoteUsers.erase(sid);
 	}
@@ -111,10 +111,49 @@ void ClientManager::getAllInHub(sid_type hsid, std::vector<sid_type>& ret) const
 
 void ClientManager::broadcast(const Command& cmd) throw()
 {
-	Buffer::Ptr tmp(new Buffer(cmd));
+	// should be safe to delay these
+	if(cmd.getCmd() == Command::SCH || cmd.getCmd() == Command::INF) {
+		if(broadcastQueue.empty())
+			EventManager::instance()->addTimer(this, 0, 5); // FIXME allow timeout to be settable
+		broadcastQueue.push_back(cmd);
+	} else {
+		broadcastQueue.push_back(cmd);
+		EventManager::instance()->removeTimer(this);
+		purgeQueue();
+	}
+}
+
+void ClientManager::onTimer(int) throw()
+{
+	purgeQueue();
+}
+
+void ClientManager::purgeQueue() throw()
+{
+	typedef vector<Command>::const_iterator QI;
+
+	Buffer::MutablePtr tmp(new Buffer);
+	ZBuffer::MutablePtr ztmp;
+	for(QI i = broadcastQueue.begin(); i != broadcastQueue.end(); ++i)
+		tmp->append(*i);
+
+	bool use_z = tmp->size() > 1024; // FIXME user-settable
+
+	if(use_z) {
+		ztmp.reset(new ZBuffer);
+		for(QI i = broadcastQueue.begin(); i != broadcastQueue.end(); ++i)
+			ztmp->append(*i);
+		ztmp->finalize();
+	}
+
 	typedef LocalUsers::const_iterator CI;
 	for(CI i = localUsers.begin(); i != localUsers.end(); ++i)
-		i->second->getSocket()->writeb(tmp);
+		if(use_z && i->second->hasSupport("ZLIF"))
+			i->second->getSocket()->writeb(ztmp);
+		else
+			i->second->getSocket()->writeb(tmp);
+
+	broadcastQueue.clear();
 }
 
 void ClientManager::broadcastFeature(const Command& cmd) throw()
