@@ -2,20 +2,28 @@
 #define QHUB_SETTINGS_H
 
 #include <string>
+#include <boost/program_options/variables_map.hpp>
 
 #include "Singleton.h"
+#include "Speaker.h"
 #include "XmlTok.h"
 
 namespace qhub {
 
-struct SettingsListener {
-	virtual void load() throw() = 0;
+class SettingsListener {
+private:
+	template <int i> struct X {};
+
+public:
+	typedef X<0> Load;
+
+	virtual void on(Load, const boost::program_options::variables_map&) throw() = 0;
 
 	// quiet, compiler
 	virtual ~SettingsListener() {}
 };
 
-class Settings : public Singleton<Settings> {
+class Settings : public Singleton<Settings>, public Speaker<SettingsListener> {
 public:
 	XmlTok* getConfig(const std::string& name) throw();
 	bool isValid() throw();
