@@ -11,6 +11,8 @@
 * added -p option to add plugins from command line
 * changed XmlTok to be more flexible
 * added non-crappy dupe nick/CID checking... still needs some stuff though
+* broadcast search and inf are queued for 5 seconds before being sent out
+* hub counts are now correctly updated
 
 - 0.10 -
 * various autoconf/automake fixes
